modified Lande model

--- a/scratch/Static_Theta_Lande_Simulation.ipynb
+++ b/scratch/Static_Theta_Lande_Simulation.ipynb
@@ -142,18 +142,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m fitness_threshold \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.01\u001b[39m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Define range of selection strengths to simulate\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m a_values \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m0.1\u001b[39m, \u001b[38;5;241m2.0\u001b[39m, num\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m)\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# Initialize lists to store output values for each value of a\u001b[39;00m\n\u001b[1;32m     15\u001b[0m mean_trait \u001b[38;5;241m=\u001b[39m []\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Define parameter values\n",
-    "pop_size = 1000\n",
+    "pop_size = 100\n",
     "num_generations = 100\n",
     "r = 1\n",
     "K = 1000\n",
     "theta = 0\n",
     "mu = 0\n",
     "sigma = 1\n",
+    "eta = \n",
+    "\n",
     "fitness_threshold = 0.01\n",
     "\n",
     "# Define range of selection strengths to simulate\n",
@@ -182,7 +196,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -196,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
