--- a/apollyon/niche_model_mods.ipynb
+++ b/apollyon/niche_model_mods.ipynb
@@ -181,6 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "f0408b82",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +407,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -420,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
