the final count down

--- a/figures/EcoDynBackgroundFigures.ipynb
+++ b/figures/EcoDynBackgroundFigures.ipynb
@@ -46,7 +46,7 @@
     "plt.xlabel('Environment')\n",
     "plt.ylabel('Phenotype')\n",
     "plt.tight_layout()\n",
-    "plt.savefig('Reaction_Norms_1.png')"
+    "plt.savefig('Reaction_Norms_1.png', dpi=300)"
    ]
   },
   {
