--- a/modules/Untitled.ipynb
+++ b/modules/Untitled.ipynb
@@ -1,6 +1,136 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b615cf99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import time\n",
+    "import math\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from decimal import Decimal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7e7878a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sim_plasticity_evo(pop_size_init = 500, num_generations = 400, r0 = 2.15, b_init = 0.25, x_init = 9.0, beta = 1.0, K = 1000, v = None, v_array = None, omegaB = 9.0, omegaZ = 25.0, sigmaB = 1.0, sigmaX = 1.0, sigmaE = 1.0):\n",
+    "    # Reaction Norm Arrays\n",
+    "    x_trait = np.zeros(num_generations) # intercept\n",
+    "    b_trait = np.zeros(num_generations) # slope\n",
+    "    z_trait = np.zeros(num_generations) # slope\n",
+    "    # Population Size Array\n",
+    "    population_size = np.zeros(num_generations)\n",
+    "\n",
+    "    # Fitness Parameters\n",
+    "    mean_fitness = np.zeros(num_generations-1)\n",
+    "    cost = np.zeros(num_generations-1)\n",
+    "    fitBar = np.zeros(num_generations-1)\n",
+    "\n",
+    "    x_trait[0] = x_init\n",
+    "    b_trait[0] = b_init\n",
+    "    population_size[0] = pop_size_init\n",
+    "    \n",
+    "    generations = 0\n",
+    "\n",
+    "    for t in range(0,num_generations-1):\n",
+    "        if v is not None:\n",
+    "            eta = (v * t)\n",
+    "        elif v_array is not None:\n",
+    "            eta = v_array[t]\n",
+    "        theta = beta * eta\n",
+    "\n",
+    "\n",
+    "        if t == 0:\n",
+    "            z = x_trait[t] + b_trait[0] * eta\n",
+    "            z_trait[t] = z\n",
+    "\n",
+    "\n",
+    "        if population_size[t] <= 0:\n",
+    "            break\n",
+    "        generations += 1\n",
+    "        ##### Calculation Population\n",
+    "        ##### Changes\n",
+    "        rZero = r0**( 1 - (population_size[t] / K) )\n",
+    "\n",
+    "        # cBar Calculations\n",
+    "        gammaB = 1/( (omegaB) + (sigmaB) )\n",
+    "\n",
+    "        cBar = np.sqrt( gammaB*(omegaB) ) * ( np.exp( -(gammaB / 2) * b_trait[0]**2) )\n",
+    "        cost[t] = cBar\n",
+    "        # wBar Calculations\n",
+    "\n",
+    "        # Assemble the Stars\n",
+    "        kappa = gammaB*sigmaB\n",
+    "        bStar = (1-kappa)*b_trait[t]\n",
+    "        sigmaBstar = (1-kappa) * sigmaB\n",
+    "        sigmaZstar = sigmaX + ( sigmaB * (eta**2) ) + sigmaE\n",
+    "\n",
+    "        #### Expressed  Trait #####\n",
+    "        zStar = x_trait[t] + bStar * eta\n",
+    "        #### Possible Change to conditional based on limited range ####\n",
+    "\n",
+    "        gammaZ = 1/( (omegaZ) + (sigmaZstar) ) \n",
+    "\n",
+    "        wBar = np.sqrt( gammaZ * (omegaZ) ) * np.exp( -(gammaZ/2) * (zStar - theta)**2 )\n",
+    "        fitBar[t] = wBar\n",
+    "        # rBar Calculations\n",
+    "\n",
+    "        rBar = rZero*wBar*cBar\n",
+    "        mean_fitness[t] = rBar\n",
+    "\n",
+    "        # Assigning New Population Size\n",
+    "        population_size[t+1] = math.floor(rBar * population_size[t])\n",
+    "\n",
+    "        ##### Calculation Mean Trait ######\n",
+    "        ##### Changes\n",
+    "\n",
+    "        # Change in intecept quantity \n",
+    "        dx = -gammaZ * ( ( x_trait[t] + (bStar * theta) ) - (beta * theta) ) * sigmaX\n",
+    "\n",
+    "        # Change in slope quantity \n",
+    "        db = bStar - b_trait[t] - ( sigmaBstar * ( gammaZ * theta ) * ( x_trait[t] + (bStar * theta) - (beta * theta) ) )\n",
+    "\n",
+    "        # Change in mean phenotype\n",
+    "\n",
+    "        x_trait[t+1] = x_trait[t] + dx\n",
+    "\n",
+    "        b_trait[t+1] = b_trait[t] + db\n",
+    "\n",
+    "        zStar_mean = x_trait[t] + (bStar*eta)\n",
+    "        z_trait = zStar_mean\n",
+    "    return population_size, mean_fitness, x_trait, b_trait, generations, cost, fitBar"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
